fix: fix layout issues

--- a/src/Styles/components/listagem/_category-list.scss
+++ b/src/Styles/components/listagem/_category-list.scss
@@ -19,5 +19,9 @@ body.categoria {
             background-color: #fcfcfc;
             padding-left: 45px
         }
+
+        .clear-filter {
+            display: none;
+        }
     }
 }
